# share-investment-agent

./: README.md  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: build-and-push.yml
share_investment_agent/: agent_config.json  agents.py  main.py
share_investment_agent/skills/share-investment/: skill.yaml
share_investment_agent/skills/share_investment/: bull_researcher.md  debate_room.md  fundamental_analysis.md  market_data_analysis.md  portfolio_management.md  sentiment_analysis.md  technical_analysis.md  valuation_analysis.md
share_investment_agent/tools/: __init__.py  data_acquisition.py  financial_analysis.py
share_investment_agent/utils/: logging_config.py
tests/: test_main.py
